# medical-calls-analysis-aws

./: .gitignore  README.md  lambda_summarize.py  lambda_transcribe.py  pyproject.toml
data_demo/: job-abc78294-bfb4-4f22-ad8a-d3b26d5329cd-transcript.json
infrastructure/: main.tf  outputs.tf  variables.tf
src/: app.py
